# maratos-chtr

./: .env.example  .gitignore  ARCHITECTURE_ANALYSIS.md  CLAUDE.md  Dockerfile  README.md  RELEASE_PROOF.md  SPEC.md  demo_thinking.py  docker-compose.yml  install.ps1  install.sh  restart.sh  start.sh  stop.sh  test_browse_api.sh
backend/: pyproject.toml  run.py
backend/app/: __init__.py  config.py  database.py  logging_config.py  main.py  prompts.py
backend/app/api/: chat.py  (+22 more)
backend/commit-capsule/: index.html  package-lock.json  package.json
backend/tests/: __init__.py  conftest.py  conftest_persistence.py  manual_handoff_test.py  manual_recursive_test.py  test_api_models.py  test_api_validation.py  test_app_factory_generator.py  test_approval_workflow.py  test_audit_retention.py  test_channel_unification.py  test_config.py  test_context_pack.py  test_delivery_workflow.py  test_guardrails.py  test_guardrails_config.py  test_guardrails_enforcer.py  test_kiro_agent_parsing.py  test_kiro_thinking.py  test_logging.py  test_mention_detector.py  test_metrics.py  test_orchestration_engine.py  test_orchestration_integration.py  test_orchestration_persistence.py  test_path_security.py  test_persistence_integration.py  test_project_docs.py  test_project_understanding.py  test_prompts_integrity.py  test_recovery.py  test_security_abuse_cases.py  test_skills.py  test_skills_system.py  test_thinking_2_0.py  test_thinking_parsing.py  test_tool_contract.py  test_tool_interpreter.py  test_workflow_gates.py  test_workflow_router.py  (+1 more)
backend/weather_app/: .env.example  README.md
(+284 files in other folders)
